# Pixel-Companions

./: .gitignore  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Game.cpp  Game.hpp  HealthBar.hpp  LICENSE  Makefile  Pet.cpp  Pet.hpp  Poop.hpp  README.md  compile_flags.txt  main
src/: Cat.hpp  Coin.cpp  Coin.hpp  DogX.cpp  DogX.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  Pet.cpp  Pet.hpp  Petting.cpp  Petting.hpp  Poop.cpp  Poop.hpp  Water.cpp  Water.hpp  game.js  game.wasm  greyCat.cpp  greyCat.hpp  healthBar.cpp  healthBar.hpp  main.cpp  pBlock.cpp  pBlock.hpp  pRow.hpp
src/companion/: Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  GreyCat.cpp  GreyCat.hpp  Pet.cpp  Pet.hpp  PinkCat.cpp  PinkCat.hpp  ShibaInu.cpp  ShibaInu.hpp  greyCat.cpp  greyCat.hpp  pinkCat.cpp  pinkCat.hpp  shibaInu.cpp  shibaInu.hpp
src/game/: Game.cpp  Game.hpp  Highscore.cpp  Highscore.hpp  Highscore.txt
src/health/: HealthBar.cpp  healthBar.cpp  healthBar.hpp  pBlock.hpp  pRow.cpp
src/kinda working/: game.data  game.js  game.wasm
src/pet-essentials/: Coin.cpp  Coin.hpp  Food.cpp  Petting.cpp  Petting.hpp  Poop.cpp  Water.cpp  Water.hpp
src/stuff/: game.js  game.wasm
src/u/: Dog.hpp
src/unit-testing/: CatUnitTest.hpp  CoinUnitTest.hpp  DogUnitTest.hpp  FoodUnitTest.hpp  GameUnitTest.hpp  GreyCatUnitTest.hpp  HealthBarUnitTest.hpp  HighscoreUnitTest.hpp  PetUnitTest.hpp  PettingUnitTest.h  PettingUnitTest.hpp  PinkCatUnitTest.hpp  PoopUnitTest.hpp  ShibaInuUnitTest.hpp  TestFile  TestFile.cpp  WaterUnitTest.h  WaterUnitTest.hpp
